z-index correction on cancel button

--- a/src/components/FilterForm.module.css
+++ b/src/components/FilterForm.module.css
@@ -42,6 +42,7 @@
   top: 0.5rem;
   left: 50%;
   transform: translateX(-50%);
+  z-index: 3;
 }
 
 @media screen and (min-width: 600px) {
